# SwiGi

./: .coverage  .coveragerc  .gitignore  README.md  build_mac.sh  install_curl.sh  install_mac.sh  pyproject.toml  requirements.txt  setup_win.bat  swigi.py
.github/: FUNDING.yml  copilot-instructions.md  instructions.md
.github/workflows/: ci.yml
.specify/: analysis.md  plan.md  tasks.md
.specify/features/: autostart.md  bettermouse-import.md  change-host-reliability.md  host-sync.md  log-rotation.md  menu-bar-macos.md  modular-architecture.md  mouse-follow-toggle.md  multi-mac-sync.md  notifications-macos.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
swigi/: __init__.py  __main__.py  bettermouse.py  constants.py  daemon.py  discovery.py  gui.py  hidapi_loader.py  logging_format.py  main.py  path_pull.py  path_push.py  prefs.py  protocol.py  state.py  sync.py  transport.py
tests/: __init__.py  test_bettermouse.py  test_constants.py  test_daemon.py  test_discovery.py  test_logging_format.py  test_path_pull.py  test_path_push.py  test_phase7.py  test_prefs.py  test_protocol.py  test_routing.py  test_sync.py  test_transport.py
utils/: README.md  add_pids.py  scan_features.py
